--- a/nav1234/work_nav.html
+++ b/nav1234/work_nav.html
@@ -9,6 +9,11 @@
 {% endblock %}
 
 {% block content %}
+		<a class='item_title' href="../export/views/work/hierarchy/index.html">活动可配置化实现</a>
+		<p>
+			繁杂的需求如何提炼、架构并高效完成
+			<span class='nav_time'>2018-5-19</span>
+		</p>
 		<a class='item_title' href="../export/r/element-ui/index.html">element-ui简单讲解</a>
 		<p>
 			element-ui大体框架、本地部署、调试简单讲解
