--- a/abc/work_nav.html
+++ b/abc/work_nav.html
@@ -9,6 +9,11 @@
 {% endblock %}
 
 {% block content %}
+		<a class='item_title' href="/wiki/#!bm/introduce.md">BM平台简介</a>
+		<p>
+			一秒输出一个页面不是梦想
+			<span class='nav_time'>2018-10-26</span>
+		</p>
 		<a class='item_title' href="../export/views/work/promise/index.html">Promise原理浅析</a>
 		<p>
 			Promise原理浅析
