--- a/abc/work_nav.html
+++ b/abc/work_nav.html
@@ -9,6 +9,11 @@
 {% endblock %}
 
 {% block content %}
+		<a class='item_title' href="/wiki/#!h5/index.md">网页读书项目技术实现</a>
+		<p>
+			介绍一些基本的技术实现和难点
+			<span class='nav_time'>2018-11-20</span>
+		</p>
 		<a class='item_title' href="/wiki/#!bm/introduce.md">BM平台简介</a>
 		<p>
 			一秒输出一个页面不是梦想
