--- a/dandan/work_nav.html
+++ b/dandan/work_nav.html
@@ -38,6 +38,9 @@
   <script src="https://d3js.org/d3-transition.v1.min.js"></script>
   <script src="./javascript/typing.js"></script>
   <script src="./javascript/main.js"></script>
+  <script type="text/javascript">
+    document.querySelector('audio').play()
+  </script>
 </body>
 
 </html>
